--- a/P202/P202.csproj
+++ b/P202/P202.csproj
@@ -44,6 +44,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Data\Customer.cs" />
+    <Compile Include="Data\Product.cs" />
+    <Compile Include="Data\Provider.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
